Align icon correctly

--- a/app/assets/stylesheets/content/work_packages/single_view/_single_view.sass
+++ b/app/assets/stylesheets/content/work_packages/single_view/_single_view.sass
@@ -79,9 +79,6 @@
     textarea
       resize: vertical
 
-  .panel-toggler .button
-    margin-right: 0
-
 .report-category-actions
   margin-top: -28px
   width: 100%
